# log

./: CLAUDE.md  SKILLS.md
SKILL-duty/evals/: trigger_cases.json
SKILLS-md/evals/: trigger_cases.json
ai-sales-advisor/: README.md  pyproject.toml
ai-sales-advisor/adapters/: __init__.py  cash_adapter.py  dispatch_adapter.py  human_assistant.py  wechat_adapter.py
ai-sales-advisor/api/: main.py  schemas.py
ai-sales-advisor/evals/: evaluation_report.md  semantic_config.json  skill_descriptions.json  trigger_cases.json
ai-sales-advisor/frontend/: config.js  index.html
ai-sales-advisor/models/: __init__.py  bill.py  conversation.py  customer.py  order.py
ai-sales-advisor/services/: conversation_mgr.py  handoff_service.py  payment_loop.py  skill_engine.py
ai-sales-advisor/skills/SKL101_接待咨询/: prompt.md  skill.json
ai-sales-advisor/skills/SKL102_智能报价/: prompt.md  skill.json
ai-sales-advisor/skills/SKL103_下单创建/: prompt.md  skill.json
ai-sales-advisor/skills/SKL104_收款确认/: prompt.md  skill.json
ai-sales-advisor/tests/integration/: test_full_flow.py  test_handoff_service.py  test_payment_loop.py  test_wechat_adapter.py
docs/superpowers/plans/: 2026-03-28-three-tier-knowledge-implementation.md  (+2 more)
logistics-chat/: index.html
logistics-login/: README.md  index.html
rga-docs/: 01_system_architecture.md  02_database_design.md  03_schema.sql  04_skills_definition.md  05_knowledge_base_design.md  06_implementation_roadmap.md  07_knowledge_taxonomy.md  08_retrieval_engine.md  README.md
word-learner/: app.js  index.html  style.css
(+4 files in other folders)
